Update openAPI with needed product controller methods
